Revert "only gradle spotless changes"
This reverts commit 8d9b44f41f2308f4f3b65453a48ae72de2a59975.